Fix typos and update posts

--- a/_posts/2017-10-01-opsdroid.md
+++ b/_posts/2017-10-01-opsdroid.md
@@ -63,9 +63,19 @@ Jacob has been a pretty amazing person since the first day I've made my first pu
   - Added test cases for the parser and matcher
   - Added documentation for the parser/matcher
 
+
 - Add a test for `aiohttp.ClientOSError` exceptions in parsers
   - Used wit.ai parser to test ways to catch the ClientOSError exception on a test
   - Updated api.ai and luis.ai parser tests to include the ClientOSError test
+
+- Add Issue/PR template 
+
+- Rename Api.ai references with Dialogflow
+  - Renamed all Api.ai references to Dialogflow
+  - Created new dialogflow matcher and Added tests for it
+  - Updated documentation
+  - Logged deprecation warning on apiai matcher - tested if logging was called
+
 
   
 
