Update header layout. Add space between rouge highlighter.

--- a/_posts/2017-10-01-opsdroid.md
+++ b/_posts/2017-10-01-opsdroid.md
@@ -15,7 +15,7 @@ Initially, I was unsure how to help. I doubted that I could do much with the kno
 Jacob has been a pretty amazing person since the first day I've made my first pull request to Opsdroid and he is always ready to give a hand or a piece of advice. Not only I've grown a lot since I started contributing to the project I've also learned new things and ways to write better code.
 
 &nbsp;
-### Things I've contributed with
+# Things I've contributed with
 ------
 &nbsp;
 - example_configuration.yaml
@@ -87,7 +87,7 @@ Jacob has been a pretty amazing person since the first day I've made my first pu
 
 
 &nbsp;
-### Info
+# Info
 ------
 &nbsp;
 
