--- a/_posts/2017-11-24-mitx6002x.md
+++ b/_posts/2017-11-24-mitx6002x.md
@@ -18,7 +18,7 @@ I loved struggling to come up with a solution to a problem. I loved spending hou
 Unfortunately, I didn't complete the course at first try, because half way through the course I decided to move to the UK.
 
 &nbsp;
-#### New Beginnings
+# New Beginnings
 -----
 &nbsp;
 
@@ -32,7 +32,7 @@ My first stop was edx.org. I enrolled to MIT6.00.1x the same day and started wor
 
 
 &nbsp;
-#### The journey
+# The journey
 -----
 &nbsp;
 
@@ -48,7 +48,7 @@ Contributing to Opsdroid was an amazing experience and I [still contribute](2017
 
 
 &nbsp;
-#### What I'm doing now
+# What I'm doing now
 -----
 &nbsp;
 
@@ -58,7 +58,7 @@ Along with that, I'm still trying to improve my knowledge of Python, Fedora(from
 
 
 &nbsp;
-#### Plans for the future
+# Plans for the future
 -----
 &nbsp;
 
