Add project opsdroid skill words, update project opsdroid

--- a/_posts/2017-10-01-opsdroid.md
+++ b/_posts/2017-10-01-opsdroid.md
@@ -85,7 +85,11 @@ Jacob has been a pretty amazing person since the first day I've made my first pu
   - Updated READMe.md
   - Added documentation for wit.ai and Recast.AI parser/matcher
   - Replaced Api.ai reference with new name - Dialogflow
-  
+
+- Added typing/thinking delay functionality
+  - Added two functions in `opsdroid.message`: typing, thinking delay
+  - Created tests for the functions
+  - Updated documentation
 
 
 &nbsp;
