Add new post, replace category icons

--- a/_posts/2017-11-24-mitx6002x.md
+++ b/_posts/2017-11-24-mitx6002x.md
@@ -5,6 +5,7 @@ subtitle: My Journey
 author: "FabioRosado"
 date:   2017-10-24 14:00:02 +0100
 categories: Random
+category_icon:  <i class="fa fa-random" aria-hidden="true"></i>
 image: computerscience.jpg
 excerpt: How I've started learning how to code and how coding made me want to learn more about Computer Science. Read about my journey and all the free courses that I've been doing to improve my knowledge.
 ---
