Add new FA link - fix broken icons

--- a/_posts/2017-10-01-opsdroid.md
+++ b/_posts/2017-10-01-opsdroid.md
@@ -4,7 +4,7 @@ title:  Opsdroid
 date:   2017-11-20 09:30:00 +0000
 categories: Projects
 tag: Chat Bot
-tag-icon: <i class="fa fa-android" aria-hidden="true"></i>
+tag-icon: <i class="fab fa-android"></i>
 image: opsdroid.jpg
 excerpt: An open source chatbot framework written in python. It is designed to be extendable, scalable and simple.
 ---
