Update posts structure and images

--- a/_posts/2017-10-01-opsdroid.md
+++ b/_posts/2017-10-01-opsdroid.md
@@ -4,7 +4,9 @@ title:  Opsdroid
 date:   2017-11-20 09:30:00 +0000
 categories: Projects
 tag: Chat Bot
-tag-icon: <i class="fab fa-android"></i>
+tag-icon: <i class="fas fa-robot"></i>
+source: https://github.com/opsdroid/opsdroid
+tech: Python Asyncio NLU
 image: opsdroid.jpg
 excerpt: An open source chatbot framework written in python. It is designed to be extendable, scalable and simple.
 ---
@@ -16,10 +18,8 @@ Initially, I was unsure how to help. I doubted that I could do much with the kno
 
 Jacob has been a pretty amazing person since the first day I've made my first pull request to Opsdroid and he is always ready to give a hand or a piece of advice. Not only I've grown a lot since I started contributing to the project I've also learned new things and ways to write better code.
 
-&nbsp;
 # Things I've contributed with
-------
-&nbsp;
+
 - example_configuration.yaml
   - Added new skills to the file
   - Added database details
@@ -91,11 +91,7 @@ Jacob has been a pretty amazing person since the first day I've made my first pu
   - Created tests for the functions
   - Updated documentation
 
-
-&nbsp;
 # Info
-------
-&nbsp;
 
 **Official site:** [https://opsdroid.github.io](https://opsdroid.github.io)
 
